# Nexus-CAD-Core

./: CMakeLists.txt  README.md
include/editor/: CurveEditor.h
include/geometry/: BezierSpline.h  CurveProcessor.h
include/math/: GeoMath.h
src/: main.cpp  resource.h  resources.rc
src/editor/: CurveEditor.cpp
